--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy React App to GitHub Pages
 on:
   push:
     branches:
-      - main
+      - main  # Cambia 'main' por la rama que uses
 
 jobs:
   build:
@@ -17,6 +17,11 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '14'
+
+      - name: Configure Git
+        run: |
+          git config --global user.email "jcarroyos@gmail.com"
+          git config --global user.name "jcarroyos"
 
       - name: Install dependencies
         run: npm install
