--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "markers-custom",
   "version": "0.1.0",
-  "homepage": "https://plannacionaldepatrimoniobyd.github.io/contenidos-locales",
+  "homepage": "https://plannacionaldepatrimoniobyd.github.io/contenidos-locales/",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
