--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "markers-custom",
+  "name": "contenidos-locales",
   "version": "0.1.0",
   "homepage": "https://plannacionaldepatrimoniobyd.github.io/contenidos-locales/",
   "dependencies": {
