--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,53 +1,38 @@
-name: Deploy to GitHub Pages
+name: Deploy React App to GitHub Pages
+
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
+
 permissions:
-  contents: read
-  pages: write
-  id-token: write
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-      - name: Detect package manager
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install" >> $GITHUB_OUTPUT
-            exit 0
-          else
-            echo "Unable to determine package manager"
-            exit 1
-          fi
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "14"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
+          cache: 'npm'
+
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        run: npm ci
+
       - name: Build project
-        run: ${{ steps.detect-package-manager.outputs.runner }} npm run build
+        run: npm run build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./build
-  # Deployment job
+
   deploy:
     environment:
       name: github-pages
@@ -55,6 +40,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
